<resources>
    <string name="app_name">Coolendar</string>
    <string name="title_home">Home</string>
    <string name="title_add_event">Add Event</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_event">"Title "</string>
    <string name="saveButton">Save</string>
    <string name="birthday">Birthday</string>
    <string name="meeting">Meeting</string>
    <string name="health">Health</string>
    <string name="others">Others</string>
    <string name="sport">Sport</string>
    <string name="note">Note</string>
    <string name="search">search</string>
    <string name="default_date">Not specified</string>
    <string name="nothing">Nothing</string>
    <string name="event_add">Event Added To Your Calendar!</string>
    <string name="title_voice">Voice</string>
    <string name="add">add</string>
    <string name="next">next</string>
    <string name="weather">weather</string>
    <string name="weather_app">I\'m not a weather application</string>
    <string name="go">GO !</string>
</resources>
