<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NotificationFragment">

    <CheckBox
        android:id="@+id/birthdayBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"/>

    <CheckBox
        android:id="@+id/sportBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport"/>

    <CheckBox
        android:id="@+id/meetingBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting"/>

    <CheckBox
        android:id="@+id/healthBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health"/>

    <CheckBox
        android:id="@+id/othersBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/others"/>

</LinearLayout>